--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a basic bot to talk in discord",
   "main": "index.js",
   "scripts": {
-      "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/jsatgit/discord-bot#readme",
   "dependencies": {
-    "discord.js": "^11.3.2"
+    "cheerio": "^1.0.0-rc.2",
+    "discord.js": "^11.3.2",
+    "request": "^2.85.0",
+    "request-promise": "^4.2.2"
   }
 }
